@@ -1,6 +1,11 @@
 2012-12-21  Mark Wielaard  <mjw@redhat.com>
 
-	* addr2line (main): Call dwfl_end.
+	* readelf.c (print_debug_frame_section): Adjust FDE start address
+	if pcrel before feeding it to format_dwarf_addr.
+
+2012-12-21  Mark Wielaard  <mjw@redhat.com>
+
+	* addr2line.c (main): Call dwfl_end.
 
 2012-12-11  Roland McGrath  <roland@hack.frob.com>
 
